[package]
name = "saml-mdq"
version = "0.1.0"
edition = "2024"
description = "A Rust client for the SAML Metadata Query (MDQ) Protocol (RFC 8484)"
license = "MIT OR Apache-2.0"
authors = ["Anish Pallati"]
repository = "https://codeberg.org/ap-1/saml-mdq"
keywords = ["saml", "mdq", "metadata", "incommon", "federation"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
hex = "0.4.3"
moka = { version = "0.12.13", features = ["future"] }
reqwest = "0.13.2"
samael = { git = "https://github.com/ap-1/samael.git", branch = "fix/contact-person-deserialization", features = ["xmlsec"] }
sha1 = "0.10.6"
thiserror = "2.0.18"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
